fixed the responsiveness on mobile view

--- a/dash.css
+++ b/dash.css
@@ -23,9 +23,9 @@ body {
   min-height: 100vh;
 }
 .main-container {
-  width: 400px;
+  width: clapm(350px, 80%, 400px);
   min-width: 250px;
-  min-height: 600px;
+  min-height: 620px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -128,8 +128,16 @@ body {
   font-size: 1.5rem;
 }
 
+.games{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
 .game-1,.game-2{
-  width: 400px;
+  width: clamp(350px, 100%, 400px);
   height: 100px;
   text-align: center;
   place-content: center;
