--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ body {
   min-height: 100vh;
 }
 .main-container {
-  width: 400px;
+  width: clamp(350px, 80%, 400px);
   min-width: 250px;
   
-  min-height: 600px;
+  min-height: 620px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -46,7 +46,7 @@ body {
   border-top-right-radius: 50%;
 } */
 .login-wrapper {
-  width: 20rem;
+  width: 19rem;
   height: 21rem;
   background-color: #fff;
   display: flex;
